# relaycli

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  RelayCLI_Build_Prompt_Sequence.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: README.md
docs/design/: RelayCLI.dc.html
new_folder/: README.md  config.json  example.txt
relaycli/: __init__.py  agent.py  appconfig.py  cli.py  config.py  config_cli.py  config_menu.py  context.py  doctor.py  frontend_scaffold.py  intent.py  llm.py  mcp.py  mcp_cli.py  memory.py  model_catalog.py  ollama_runtime.py  onboarding.py  permissions.py  project_hints.py  relay.py  render.py  repl.py  roles.py  roster.py  router.py  session.py  slash.py  web.py  web_ui.html
relaycli/skills/: __init__.py  brainstorm.md  debug.md  frontend-taste.md  ponytail.md  tdd.md  verify.md
relaycli/tools/: __init__.py  background.py  base.py  create_folder.py  edit_file.py  find_files.py  list_dir.py  read_file.py  remember.py  run_command.py  search.py  write_file.py
scripts/: install.sh
shooooi/: README.md  app.js  index.html  styles.css
tests/: conftest.py  fake_mcp_server.py  test_agent_loop.py  test_appconfig.py  test_config_cli.py  test_config_menu.py  test_doctor.py  test_e2e_live.py  test_install_script.py  test_intent.py  test_llm_unit.py  test_mcp.py  test_memory.py  test_model_catalog.py  test_onboarding.py  test_permissions.py  test_relay.py  test_roster.py  test_scaffold.py  test_security_audit.py  test_skills.py  test_tools.py  test_ux.py  test_web.py
(+10 files in other folders)
